     especially to acquisition wrappers.

     N.B:  ExtensionClassType already declares that it supports GC
     (via the Py_TPFLAGS_HAVE_GC flag), but does not appear to conform
     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  After Zope 2.8.6

    Bugs fixed

      - Collector #2039: 'ZPublisher.HTTPRequest.HTTPRequest._authUserPW'
        choked on passwords which contained colons.

      - Missing import of NotFound in webdav.Resource.

      - OFS.Image: 'Image.update_data' did not refresh the Etag.

      - Collector #940: PageTemplateFile: Open files with universal
        line-endings support to avoid line-endings problems within python
        expressions.
        

  Zope 2.8.6 (2006/02/25)

    Bugs Fixed

      - Collector #1819: fixed signature of
        MountedObject.SimpleTrailblazer._construct(

      - ZPublisher.BaseRequest: The publisher would happily publish attributes
        of type 'bool' and 'complex', as well as Python 2.4's 'set' and
        'frozenset'.

      - Collector #1991: ZPublisher did not deal properly with a trailing
        %20 in the URL

      - Collector #2013: improved XHTML conformance of error messages,
        some of which did not close '<p>' tags.

      - Collector #1999: fixed broken FTP rename functionality
        (RNFR now returns 350 as status code instead 250)

      - Collector #2002: fixed broken 'ls -R' functionality (didn't
        recurse properly subclasses of OFS.Folder)

  Zope 2.8.5 (2005/12/19)

    Bugs Fixed


      - Collector #1939: When running as a service, Zope could
        potentially collect too much log output filling the NT Event
        Log. When that happened, a 'print' during exception handling
        would cause an IOError in the restart code causing the service
        not to restart automatically.

        Problem is that a service/pythonw.exe process *always* has an